# algo-reverb-rust

./: .gitmodules  Cargo.toml  Makefile.toml  README.md
mirror_plugin/: Cargo.toml
mirror_plugin/src/: lib.rs
schroederverb/: Cargo.toml
schroederverb/src/: audio_knob.rs  bool_button.rs  colors.rs  editor.rs  knob.rs  lib.rs  main.rs  param_knob.rs  plugin.rs  schroeder.rs  ui_knob.rs
